--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -70,3 +70,24 @@
         }
     }
 }
+
+.btn {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 15px 30px;
+    background-color: white;
+    color: #d32f2f; 
+    font-weight: bold;
+    font-size: 20px; 
+    text-decoration: none;
+    border-radius: 30px;
+    border: 2px solid #d32f2f;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .btn:hover {
+    background-color: #d32f2f; 
+    color: white; 
+    border-color: #d32f2f;
+  }
+  
