--- a/src/mains.scss
+++ b/src/mains.scss
@@ -1,3 +1,12 @@
 //layout
 @import "./layout/header";
 @import "./components/heroSection";
+@import "./layout/fotter";
+@import "./layout/menu";
+@import "./layout/lunchitem";
+@import "./layout/dinneritem";
+@import "./layout/galery";
+
+//pages
+@import "./pages/home" ;
+@import "./pages/contact";
